--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "modem"
 version = "0.0.1"
 authors = ["Mick Koch <mick@kochm.co>"]
 
+[dependencies]
+getopts = "*"
+
 [lib]
 name = "modem"
 path = "src/modem/lib.rs"
