Add initial i/q demodulator

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,9 @@ name = "modulate"
 path = "src/bin/modulate.rs"
 
 [[bin]]
+name = "demodulate"
+path = "src/bin/demodulate.rs"
+
+[[bin]]
 name = "fm"
 path = "src/bin/fm.rs"
